api/src/main/java/com/example/api/error/exception/BadRequestHeadersException.java
package com.example.api.error.exception;

public class BadRequestHeadersException extends Exception{

    public BadRequestHeadersException(String message) {
        super(message);
    }
}
